# grmtools

./: .buildbot.sh  .buildbot_dockerfile_debian  .gitignore  .rustfmt.toml  .travis.yml  CHANGES.md  COPYRIGHT  Cargo.toml  LICENCE  LICENSE-APACHE  LICENSE-MIT  README.md  bors.toml  deny.toml  index.html
.cargo/: config.toml
.github/workflows/: sdci.yml
cfgrammar/: Cargo.toml  README.md
cfgrammar/src/lib/: analysis.rs  header.rs  idxnewtype.rs  markmap.rs  mod.rs  newlinecache.rs  span.rs  test_utils.rs  u32struct.rs
cfgrammar/src/lib/yacc/: ast.rs  firsts.rs  follows.rs  grammar.rs  info.rs  mod.rs  parser.rs  reporting.rs
doc/: .gitignore  book.toml  build.sh
doc/src/: README.md  SUMMARY.md  actioncode.md  ast_example.md  cfgrammar.md  editions.md  errorrecovery.md  grammar_testing.md  lexcompatibility.md  lexextensions.md  lexing.md  lexsyntax.md  libsandtools.md  lrlex.md  lrpar.md  lrtable.md  manuallexer.md  nimbleparse.md  othertools.md  parsing.md  parsing_idioms.md  parsing_startrules.md  quickstart.md  start_states.md  testing.md  thirdparty.md  yacccompatibility.md  yaccextensions.md  yaccvariants.md
examples/calc/: Cargo.toml  build.rs
examples/calc/src/: calc.l  main.rs
grammar_testing/: Cargo.toml
grammar_testing/src/: lib.rs
grmtools-0.1.0/book/: 404.html  cfgrammar.html  errorrecovery.html  index.html  lexing.html  libsandtools.html  lrlex.html  lrpar.html  lrtable.html  nimbleparse.html  parsing.html  print.html  quickstart.html  searchindex.js  toc.html  toc.js
grmtools-0.1.1/book/: 404.html  cfgrammar.html  errorrecovery.html  index.html  lexing.html  libsandtools.html  lrlex.html  lrpar.html  lrtable.html  nimbleparse.html  parsing.html  print.html  quickstart.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-7307fef9.js  searchindex-88d7a5d0.js  searchindex.js  searchindex.json  toc-232f5014.js  toc-634503d6.js  toc.html  toc.js
grmtools-0.10.0/book/: 404.html  actioncode.html  ast_example.html  cfgrammar.html  errorrecovery.html  index.html  lexcompatibility.html  lexing.html  libsandtools.html  lrlex.html  lrpar.html  lrtable.html  nimbleparse.html  othertools.html  parsing.html  parsing_idioms.html  print.html  quickstart.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-d3782225.js  searchindex-f7529423.js  searchindex.js  searchindex.json  yacccompatibility.html
lrlex/: Cargo.toml  README.md
lrlex/examples/calc/: Cargo.toml
lrlex/examples/calc/src/: calc.l  main.rs
lrlex/examples/calc_manual_lex/: Cargo.toml  README.md  build.rs
lrlex/examples/calc_manual_lex/src/: calc.y  main.rs
lrlex/examples/calclex/: Cargo.toml  README.md  build.rs
lrlex/examples/calclex/src/: main.rs
lrlex/src/: main.rs
lrlex/src/lib/: builder.rs  ctbuilder.rs  defaults.rs  lexeme.rs  lexemes.rs  lexer.rs  mod.rs  parser.rs
lrlex/test/caseless/: C.java  Cargo.toml  build.rs
lrlex/test/caseless/src/: java.l  main.rs
lrpar/: Cargo.toml  Makefile  README.md  build.rs
lrpar/cttests/: Cargo.toml  build.rs
lrpar/cttests/src/: calc_actiontype.test  calc_encoding_fixed.test  calc_encoding_fixed2.test  calc_encoding_variable.test  calc_encoding_variable2.test  calc_input.test  calc_multitypes.test  calc_noactions.test  calc_nodefault_yacckind.test  calc_parse_param.test  calc_recoverer_cpctplus.test  calc_recoverer_none.test  calc_unsafeaction.test  calc_wasm.rs  calc_wasm.test  cgen_helper.rs  epp.test  expect.test  expect_missing_tokens.test  expectrr.test  grmtools_section.test  lex_flags.test  lexer_lifetime.test  lib.rs  multi_start.l  multi_start.y  multiparam.test  multiparam_generic.test  parseparam.test  parseparam_copy.test  passthrough.test  quoting.test  regex_opt.test  regex_trailing_ws.test  span.test  storaget.l  storaget.y  typeparams.test  warnings.test
lrpar/cttests/src/ctfails/: calc_bad_input.test  missing.test  test_files1.test  test_files2.test  test_files3.test  warnings.test  warnings_flags.test
lrpar/cttests_macro/: Cargo.toml
lrpar/cttests_macro/src/: lib.rs
lrpar/examples/actions/: build.rs
lrpar/examples/actions/src/: calc.l  calc.y
lrpar/examples/calc/: Cargo.toml  README.md  build.rs
lrpar/examples/calc/src/: calc.y
lrpar/examples/calc_actions/: Cargo.toml  README.md  build.rs
lrpar/examples/calc_actions/src/: calc.l  calc.y  main.rs
lrpar/examples/calc_ast/: Cargo.toml  README.md  build.rs
lrpar/examples/calc_ast/src/: calc.l  calc.y  main.rs
lrpar/examples/calc_ast_arena/: Cargo.toml
lrpar/examples/calc_ast_arena/src/: calc.l  calc.y  input.txt  main.rs
lrpar/examples/calc_parsetree/: Cargo.toml  README.md  build.rs
lrpar/examples/calc_parsetree/src/: calc.l  calc.y  main.rs
lrpar/examples/calcparse/: Cargo.toml  build.rs
lrpar/examples/calcparse/src/: calc.y  main.rs
lrpar/examples/clone_param/: Cargo.toml  README.md  build.rs
lrpar/examples/clone_param/src/: input.txt  main.rs  param.l  param.y
lrpar/examples/inspect/: Cargo.toml  build.rs
lrpar/examples/inspect/src/: main.rs  todo.l  todo.y
lrpar/examples/pretty_errors/: Cargo.toml
lrpar/examples/pretty_errors/src/: erroneous.l  erroneous.rs  erroneous.y  main.rs
lrpar/examples/regex_opts/: Cargo.toml  README.md  build.rs
lrpar/examples/regex_opts/src/: any.l  any.y  main.rs
lrpar/examples/start_states/: Cargo.toml  README.md  build.rs
lrpar/examples/start_states/src/: comment.l  comment.y  input.txt  main.rs
lrpar/src/: main.rs
lrpar/src/lib/: astar.rs  builder.rs  cpctplus.rs  ctbuilder.rs  diagnostics.rs  dijkstra.rs  lex.rs  lex_api.rs  mf.rs  mod.rs  panic.rs  parser.rs  test_utils.rs
lrpar/tests/: Cargo.toml  build.rs  ct.rs
lrpar/tests/src/: calc_actiontype.test  calc_multitypes.test  calc_noactions.test  lib.rs  multitypes.test
lrtable/: Cargo.toml  README.md
lrtable/src/lib/: firsts.rs  itemset.rs  mod.rs  pager.rs  stategraph.rs  statetable.rs  test_utils.rs
nimbleparse/: Cargo.toml  README.md
nimbleparse/src/: diagnostics.rs  main.rs
src/: main.rs
tests/: test_grammar.rs  test_grammar_ast.rs  test_pgen.rs  test_stategraph.rs  test_yaccparser.rs
(+1421 files in other folders)
