[workspace]
members=[
    "cfgrammar",
    "lrlex",
    "lrlex/examples/calclex",
    "lrlex/examples/calc_manual_lex",
    "lrpar",
    "lrpar/cttests",
    "lrpar/cttests_macro",
    "lrpar/examples/calc_actions",
    "lrpar/examples/calc_ast",
    "lrpar/examples/calc_parsetree",
    "lrpar/examples/start_states",
    "lrpar/examples/clone_param",
    "lrtable",
    "nimbleparse",
]
resolver = "2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[workspace.dependencies]
bincode = "1.2"
cactus = "1.0"
filetime = "0.2"
fnv = "1.0"
getopts = "0.2"
lazy_static = "1.4"
indexmap = "2"
num-traits = "0.2"
packedvec = "1.2"
quote = "1.0"
regex = "1.3"
regex-syntax = "0.8"
serde = "1.0"
sparsevec = "0.2"
static_assertions = "1.1"
unicode-width = "0.1.11"
vob = ">=3.0.2"
proc-macro2 = "1.0"
prettyplease = "0.2.30"
syn = "2.0"
