[workspace]
members=[
    "cfgrammar",
    "lrlex",
    "lrlex/examples/calclex",
    "lrlex/examples/calc_manual_lex",
    "lrpar",
    "lrpar/cttests",
    "lrpar/cttests_macro",
    "lrpar/examples/calc_actions",
    "lrpar/examples/calc_ast",
    "lrpar/examples/calc_parsetree",
    "lrpar/examples/calc_ast_arena",
    "lrpar/examples/start_states",
    "lrpar/examples/clone_param",
    "lrtable",
    "nimbleparse",
    "grammar_testing",
]
resolver = "2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[workspace.dependencies]
bincode = "2.0"
cactus = "1.0"
filetime = "0.2"
fnv = "1.0"
getopts = "0.2"
glob = "0.3"
indexmap = "2"
num-traits = "0.2"
packedvec = "1.2"
quote = "1.0"
regex = "1.3"
regex-syntax = "0.8"
serde = "1.0"
sparsevec = "0.2.2"
unicode-width = "0.1.11"
vob = "3.0.4"
proc-macro2 = "1.0"
prettyplease = "0.2.31"
syn = "2.0"
yaml-rust2 = "0.10.1"
ron = "0.10"
