[package]
name = "cfgrammar"
description = "Grammar manipulation"
repository = "https://github.com/softdevteam/grmtools"
version = "0.13.10"
authors = ["Laurence Tratt <http://tratt.net/laurie/>"]
edition = "2021"
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["parsing"]
keywords = ["yacc", "grammar"]

[lib]
name = "cfgrammar"
path = "src/lib/mod.rs"

[dependencies]
lazy_static.workspace = true
indexmap.workspace = true
num-traits.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
vob = { workspace = true, features = ["serde"] }
quote.workspace = true
proc-macro2.workspace = true
