[package]
name = "cfgrammar"
description = "Grammar manipulation"
repository = "https://github.com/softdevteam/grmtools"
version = "0.13.10"
edition = "2024"
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["parsing"]
keywords = ["yacc", "grammar"]

[features]
serde = ["dep:serde", "serde/derive", "vob/serde"]
bincode = ["dep:bincode", "vob/bincode"]

[lib]
name = "cfgrammar"
path = "src/lib/mod.rs"

[dependencies]
bincode = { workspace = true, optional = true, features = ["derive"] }
indexmap.workspace = true
num-traits.workspace = true
regex.workspace = true
serde = { workspace = true, optional = true }
vob = { workspace = true }
quote.workspace = true
proc-macro2.workspace = true
