[package]
name = "cfgrammar"
description = "Grammar manipulation"
repository = "https://github.com/softdevteam/grmtools"
version = "0.14.2"
edition = "2024"
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["parsing"]
keywords = ["yacc", "grammar"]

[features]
serde = ["dep:serde", "serde/derive", "vob/serde"]
wincode = ["dep:wincode", "vob/wincode"]

[lib]
name = "cfgrammar"
path = "src/lib/mod.rs"

[dependencies]
wincode = { workspace = true, optional = true, features = ["derive"] }
indexmap.workspace = true
num-traits.workspace = true
regex.workspace = true
serde = { workspace = true, optional = true }
vob = { workspace = true }
quote.workspace = true
proc-macro2.workspace = true
