[package]
name = "lrlex"
description = "Simple lexer generator"
repository = "https://github.com/softdevteam/grmtools"
version = "0.13.3"
authors = ["Laurence Tratt <http://tratt.net/laurie/>"]
edition = "2021"
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["parsing"]

[[bin]]
doc = false
name = "lrlex"

[lib]
name = "lrlex"
path = "src/lib/mod.rs"

[features]
_unstable_api = []
_unsealed_unstable_traits = ["_unstable_api"]

[build-dependencies]
vergen = { version = "8", default-features = false, features = ["build"] }

[dependencies]
cfgrammar = { path = "../cfgrammar", version = "0.13" }
getopts = "0.2" # only needed for src/main.rs
lazy_static = "1.4"
lrpar = { path = "../lrpar", version = "0.13" }
regex = "1"
regex-syntax = "0.7"
num-traits = "0.2"
quote = "1.0"
serde = "1.0"
