[package]
name = "lrlex"
description = "Simple lexer generator"
repository = "https://github.com/softdevteam/grmtools"
version = "0.13.10"
authors = ["Laurence Tratt <http://tratt.net/laurie/>"]
edition = "2021"
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["parsing"]

[[bin]]
doc = false
name = "lrlex"

[lib]
name = "lrlex"
path = "src/lib/mod.rs"

[features]
_unstable_api = []
_unsealed_unstable_traits = ["_unstable_api"]

[build-dependencies]
vergen = { version = "8", default-features = false, features = ["build"] }

[dependencies]
cfgrammar = { path = "../cfgrammar", version = "0.13" }
lrpar = { path = "../lrpar", version = "0.13" }

getopts.workspace = true
lazy_static.workspace = true
regex.workspace = true
regex-syntax.workspace = true
num-traits.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
