[package]
name = "lrlex"
description = "Simple lexer generator"
repository = "https://github.com/softdevteam/grmtools"
version = "0.14.0"
edition = "2024"
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["parsing"]

[[bin]]
doc = false
name = "lrlex"

[lib]
name = "lrlex"
path = "src/lib/mod.rs"

[features]
_unstable_api = []
_unsealed_unstable_traits = ["_unstable_api"]

[build-dependencies]
vergen = { version = "8", default-features = false, features = ["build"] }

[dependencies]
cfgrammar = { path = "../cfgrammar", version = "0.14" }
lrpar = { path = "../lrpar", version = "0.14" }

getopts.workspace = true
regex.workspace = true
regex-syntax.workspace = true
num-traits.workspace = true
proc-macro2.workspace = true
quote.workspace = true
bincode.workspace = true
serde = { workspace = true, optional = true }
prettyplease.workspace = true
syn.workspace = true
glob.workspace = true
