[package]
name = "lrpar"
description = "Yacc-compatible parser generator"
repository = "https://github.com/softdevteam/grmtools"
version = "0.13.10"
edition = "2021"
readme = "README.md"
license = "Apache-2.0/MIT"
build = "build.rs"
categories = ["parsing"]
keywords = ["parser", "LR", "yacc", "grammar"]

[lib]
name = "lrpar"
path = "src/lib/mod.rs"

[features]
default = ["prettyplease"]
serde = []
# Enable the pretty please code formatter on generated code.
prettyplease = ["dep:prettyplease"]
_unstable_api = []
_unsealed_unstable_traits = ["_unstable_api"]

[build-dependencies]
vergen = { version = "8", default-features = false, features = ["build"] }

[dependencies]
cfgrammar = { path="../cfgrammar", version = "0.13", features=["serde"] }
lrtable = { path="../lrtable", version = "0.13", features=["serde"] }

bincode.workspace = true
cactus.workspace = true
filetime.workspace = true
indexmap.workspace = true
lazy_static.workspace = true
num-traits.workspace = true
packedvec.workspace = true
prettyplease = { workspace = true, optional = true }
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
static_assertions.workspace = true
vob.workspace = true
syn.workspace = true

[dev-dependencies]
tempfile = "3.0"
