[package]
name = "lrtable"
description = "LR grammar table generation"
repository = "https://github.com/softdevteam/grmtools"
version = "0.15.0"
edition = "2024"
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["parsing"]

[features]
wincode = ["dep:wincode", "sparsevec/wincode", "cfgrammar/wincode"]
serde = ["dep:serde", "sparsevec/serde", "cfgrammar/serde"]

[lib]
name = "lrtable"
path = "src/lib/mod.rs"

[dependencies]
cfgrammar = { path="../cfgrammar", version = "0.15" }

wincode = { workspace = true, features = ["derive"], optional = true }
fnv.workspace = true
num-traits.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
vob.workspace = true
sparsevec.workspace = true
