[package]
name = "nimbleparse"
description = "Simple Yacc grammar debugging tool"
repository = "https://github.com/softdevteam/grmtools"
version = "0.13.5"
authors = ["Laurence Tratt <http://tratt.net/laurie/>"]
edition = "2021"
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["parsing"]

[[bin]]
doc = false
name = "nimbleparse"

[dependencies]
cfgrammar = { path="../cfgrammar", version="0.13" }
lrlex = { path="../lrlex", version="0.13" }
lrpar = { path="../lrpar", version="0.13" }
lrtable = { path="../lrtable", version="0.13" }

getopts.workspace = true
num-traits.workspace = true
unicode-width.workspace = true
