[package]
name = "lrpar-tests"
version = "0.1.0"
authors = ["test"]
edition = "2021"
license = "Apache-2.0/MIT"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cfgrammar = { path = "../../cfgrammar" }
lrlex = { path = "../../lrlex" }
lrpar = { path = "../" }
glob = "0.3"
yaml-rust2 = "0.8"
cfg_aliases = "0.2.1"

[dependencies]
cfgrammar = { path = "../../cfgrammar" }
lrlex = { path = "../../lrlex" }
lrpar = { path = "../" }
yaml-rust2 = "0.8"
glob = "0.3"

[dev-dependencies]
cttests_macro = { path = "../cttests_macro" }

[target.'cfg(all(target_arch = "wasm32", target_os="unknown", target_vendor="unknown"))'.dependencies]
wasm-bindgen = "0.2.100"

[target.'cfg(all(target_arch = "wasm32", target_os="unknown", target_vendor="unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3.50"
