[package]
name = "lrpar-tests"
version = "0.1.0"
authors = ["test"]
edition = "2024"
license = "Apache-2.0/MIT"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cfgrammar = { path = "../../cfgrammar" }
lrlex = { path = "../../lrlex" }
lrpar = { path = "../" }
glob.workspace = true
yaml-rust2.workspace = true
cfg_aliases = "0.2.1"

[dependencies]
cfgrammar = { path = "../../cfgrammar" }
glob.workspace = true
lrlex = { path = "../../lrlex" }
lrpar = { path = "../" }
yaml-rust2.workspace = true

[dev-dependencies]
cttests_macro = { path = "../cttests_macro" }

[target.'cfg(all(target_arch = "wasm32", target_os="unknown", target_vendor="unknown"))'.dependencies]
wasm-bindgen = {version = "0.2.100", default-features = false}

[target.'cfg(all(target_arch = "wasm32", target_os="unknown", target_vendor="unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3.50"
