[package]
name = "cttests_macro"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3"
quote = "1.0"
proc-macro2 = { version = "1.0", features=["proc-macro"]}
syn = "2.0"
