[package]
name = "lrpar-tests"
version = "0.1.0"
authors = ["test"]
edition = "2018"
build = "build.rs"

[build-dependencies]
cfgrammar = { path = "../../cfgrammar" }
lrlex = { path = "../../lrlex" }
lrpar = { path = "../" }
glob = "0.2"
yaml-rust = "0.4"

[dependencies]
cfgrammar = { path = "../../cfgrammar" }
lrlex = { path = "../../lrlex" }
lrpar = { path = "../" }
