[package]
name = "calc_actions"
version = "0.1.0"
authors = ["Laurence Tratt <http://tratt.net/laurie/>"]
edition = "2018"
license = "Apache-2.0/MIT"

[[bin]]
doc = false
name = "calc_actions"

[build-dependencies]
cfgrammar = { path="../../../cfgrammar" }
lrlex = { path="../../../lrlex" }
lrpar = { path="../.." }

[dependencies]
cfgrammar = { path="../../../cfgrammar" }
lrlex = { path="../../../lrlex" }
lrpar = { path="../.." }
