[package]
name = "calcparse"
version = "0.1.0"
authors = ["Laurence Tratt <http://tratt.net/laurie/>"]

[[bin]]
doc = false
name = "calcparse"

[build-dependencies]
lrlex = { path="../../../lrlex" }
lrpar = { path="../.." }

[dependencies]
cfgrammar = { path="../../../cfgrammar" }
lrlex = { path="../../../lrlex" }
lrpar = { path="../.." }
