[package]
name = "clone_param"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"

[[bin]]
doc = false
name = "clone_param"

[build-dependencies]
cfgrammar = { path="../../../cfgrammar" }
lrlex = { path="../../../lrlex" }
lrpar = { path="../.." }

[dependencies]
cfgrammar = { path="../../../cfgrammar" }
lrlex = { path="../../../lrlex" }
lrpar = { path="../.." }
