[package]
name = "regex_opts"
version = "0.1.0"
authors = ["matt rice <ratmice@gmail.com>"]
edition = "2021"
license = "Apache-2.0/MIT"

[[bin]]
doc = false
name = "regex_opts"

[build-dependencies]
cfgrammar = { path="../../../cfgrammar" }
lrlex = { path="../../../lrlex" }
lrpar = { path="../.." }

[dependencies]
cfgrammar = { path="../../../cfgrammar" }
lrlex = { path="../../../lrlex" }
lrpar = { path="../.." }
